**8.1.2 (unreleased)**

* Fix a regression on systems with uninitialized locale (:issue:`3575`).


**8.1.1 (2016-03-17)**

* Fix regression with non-ascii requirement files on Python 2 and add support
  for encoding headers in requirement files (:issue:`3548`, :pull:`3547`).


**8.1.0 (2016-03-05)**

* Implement PEP 513, which adds support for the manylinux1 platform tag,
  allowing carefully compiled binary wheels to be installed on compatible Linux
  platforms.

* Allow wheels which are not specific to a particular Python interpreter but
  which are specific to a particular platform (:issue:`3202`).

* Fixed an issue where ``call_subprocess`` would crash trying to print debug
  data on child process failure (:issue:`3521`, :pull:`3522`).

* Exclude the wheel package from the `pip freeze` output (like pip and setuptools).
  :issue:`2989`.

* Allow installing modules from a subdirectory of a vcs repository
  in non-editable mode (:issue:`3217`, :pull:`3466`).

* Make pip wheel and pip download work with vcs urls with subdirectory option
  (:pull:`3466`).

* Show classifiers in ``pip show``.

* Show PEP376 Installer in ``pip show`` (:issue:`3517`).

* Unhide completion command (:pull:`1810`).

* Show latest version number in ``pip search`` results (:pull:`1415`).

* Decode requirement files according to their BOM if present (:pull:`3485`,
  :issue:`2865`).

* Fix and deprecate package name detection from url path (:issue:`3523` and
  :pull:`3495`).

* Correct the behavior where interpreter specific tags (such as cp34) were
  being used on later versions of the same interprter instead of only for that
  specific interpreter (:issue:`3472`).

* Fix an issue where pip would erroneously install a 64 bit wheel on a 32 bit
  Python running on a 64 bit OS X machine.

* Do not assume that all git repositories have an origin remote.

* Correctly display the line to add to a requirements.txt for an URL based
  dependency when ``--require-hashes`` is enabled.

