@@ -457,3 +457,41 @@ def test_install_distribution_union_conflicting_extras(script, data):
                                       expect_error=True)
     assert 'installed' not in result.stdout
     assert "Conflict" in result.stderr
+
+
+def test_install_unsupported_wheel_link_with_marker(script, data):
+    script.scratch_path.join("with-marker.txt").write(
+        textwrap.dedent("""\
+            %s; %s
+        """) %
+        (
+            'https://github.com/a/b/c/asdf-1.5.2-cp27-none-xyz.whl',
+            'sys_platform == "xyz"'
+        )
+    )
+    result = script.pip(
+        'install', '-r', script.scratch_path / 'with-marker.txt',
+        expect_error=False,
+        expect_stderr=True,
+    )
+
+    s = "Ignoring asdf: markers %r don't match your environment" %\
+        u'sys_platform == "xyz"'
+    assert s in result.stderr
+    assert len(result.files_created) == 0
+
+
+def test_install_unsupported_wheel_file(script, data):
+    # Trying to install a local wheel with an incompatible version/type
+    # should fail.
+    script.scratch_path.join("wheel-file.txt").write(textwrap.dedent("""\
+        %s
+        """ % data.packages.join("simple.dist-0.1-py1-none-invalid.whl")))
+    result = script.pip(
+        'install', '-r', script.scratch_path / 'wheel-file.txt',
+        expect_error=True,
+        expect_stderr=True,
+    )
+    assert ("simple.dist-0.1-py1-none-invalid.whl is not a supported " +
+            "wheel on this platform" in result.stderr)
+    assert len(result.files_created) == 0
